# av-study-and-demos

./: .gitignore
Demos/EasyPlayer/: CMakeLists.txt  README.md  main.cpp
Notes/: av-foundation-and-ffmpeg-api.md
